MMF timetable added!

--- a/Mob work/src/pages/home/home.html
+++ b/Mob work/src/pages/home/home.html
@@ -1,57 +1,35 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Расписание</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-card *ngFor="let p of parray">
-        <ion-row>
-          <ion-col align-self-center text-center>
-            <h1>{{p.name}}</h1>
-          </ion-col>
-          <ion-col align-self-center text-center>
-            <p>Category: {{p.category}}</p>
-          </ion-col>
-        </ion-row>
-
-        <ion-card-content>
-          <p>{{p.description}}</p>
-        </ion-card-content>
-
-        <ion-row>
-          <ion-col align-self-center text-center>
-            <h2>{{p.label}}</h2>
-          </ion-col>
-          <ion-col align-self-center text-center>
-            <h2>{{p.price}}$</h2>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-           <p>Comments:</p>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-card>
-            <ion-row>
-              <ion-col>
-                <h2> Rank {{p.comment.rating}}</h2>
+  <!-- <button ion-button (click)="goHello()">SomeTextHere</button> -->
+  <ion-list no-lines no-padding>
+    <ion-slides>
+      <ion-slide *ngFor="let d of daysArray">
+        <h1>{{d.day}}</h1>
+        <ion-item>
+          <ion-card *ngFor="let s of d.subjects">
+            <ion-card-title>
+              <ion-item>{{s.subject}}</ion-item>
+              <ion-item>{{s.teacher}}</ion-item>
+            </ion-card-title>
+            <ion-card-content>
+              <ion-col col-4>
+                {{s.timeStart}}
               </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                <p>{{p.comment.text}}</p>
+              <ion-col col-8>
+                Аудитория: {{s.lectureHall}}
               </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col>
-                <p>By {{p.comment.author}}</p>
-              </ion-col>
-            </ion-row>
+            </ion-card-content>
           </ion-card>
-        </ion-row>
-    </ion-card>
+        </ion-item>
+      </ion-slide>
+    </ion-slides>
   </ion-list>
 </ion-content>
